--- a/PPCMD/Views/Shared/_AppLayout.cshtml
+++ b/PPCMD/Views/Shared/_AppLayout.cshtml
@@ -129,7 +129,7 @@
                     <i class="bi bi-chevron-down small"></i>
                 </a>
                 <div class="collapse ms-3" id="generalMenu">
-                    <a asp-action="Index" asp-controller="Client" class="nav-link text-white-50">Clients</a>
+                    <a asp-action="Index" asp-controller="GeneralConsignment" class="nav-link text-white-50">Job Listing</a>
                     <a href="#" class="nav-link text-white-50">Test Link 2</a>
                 </div>
             </div>
